# zk-eidas

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.longfellow  LICENSE  README.md  fly.longfellow.toml  fly.toml
.cargo/: config.toml
.githooks/: pre-commit
circuits/: .gitignore  Makefile  artifact-urls.json  download-artifacts.sh  package.json
circuits/ecdsa_verify/: ecdsa_verify.circom
circuits/holder_binding/: holder_binding.circom
circuits/identity_escrow/: identity_escrow.circom
circuits/lib/: commitment.circom  poseidon.circom
circuits/nullifier/: nullifier.circom
circuits/patches/: apply-circom-pairing-p256-fix.sh  curve.circom.patched
circuits/predicates/: eq.circom  gte.circom  lte.circom  neq.circom  range.circom  set_member.circom
circuits/scripts/: split-zkey.mjs
circuits/test/: escrow_verbose.js  package.json  predicates.test.js  special.test.js
crates/cbor-print/: Cargo.toml
crates/cbor-print/src/: lib.rs
crates/longfellow-sys/: Cargo.toml  build.rs  wrapper.h
crates/longfellow-sys/src/: lib.rs  mdoc.rs  p7s.rs  safe.rs
crates/zk-eidas/: Cargo.toml
crates/zk-eidas-mdoc/: Cargo.toml
crates/zk-eidas-mdoc/src/: cose.rs  lib.rs  mso.rs  test_utils.rs
crates/zk-eidas-p7s/: Cargo.toml  README.md
crates/zk-eidas-p7s-circuit/: Cargo.toml  README.md
crates/zk-eidas-p7s-circuit/src/: holder_binding.rs  lib.rs  prover.rs  verifier.rs  witness.rs
crates/zk-eidas-p7s-circuit/tests/: cert_chain_ecdsa.rs  content_digest.rs  content_signature.rs  context_hash.rs  declaration_whitelist.rs  fixture_diia.rs  fixture_test_anchor_a.rs  holder_binding.rs  invariant_1.rs  invariant_10.rs  invariant_2a.rs  invariant_2b.rs  invariant_2c.rs  invariant_4.rs  invariant_5.rs  invariant_6.rs  invariant_7.rs  invariant_8.rs  invariant_9.rs  invariant_9a_plumbing.rs  json_context_equality.rs  json_nonce_equality.rs  json_pk_equality.rs  message_digest_binding.rs  nullifier.rs  trust_anchor.rs
crates/zk-eidas-p7s/fixtures/: admin-binding.qkb.p7s  binding.qkb.p7s  kat-subject-serial.json  testanchor-b-admin-binding.qkb.p7s  testanchor-b-binding.qkb.p7s
crates/zk-eidas-p7s/src/: lib.rs  locator.rs  outputs.rs  parser.rs  verify.rs  witness.rs
crates/zk-eidas-p7s/tests/: fixture_cross.rs  fixture_decl_ts.rs  fixture_diia.rs  fixture_kat.rs  fixture_signedattrs.rs  fixture_test_anchor_a.rs  fixture_test_anchor_b.rs
crates/zk-eidas-parser/: Cargo.toml
crates/zk-eidas-parser/src/: claims.rs  lib.rs  sdjwt.rs  test_utils.rs
crates/zk-eidas-parser/tests/: parser_test.rs
crates/zk-eidas-prover/: Cargo.toml  build.rs
crates/zk-eidas-prover/src/: circuit.rs  lib.rs  prover.rs  signed_input.rs
crates/zk-eidas-prover/tests/: prover_test.rs
crates/zk-eidas-types/: Cargo.toml
crates/zk-eidas-types/src/: commitment.rs  credential.rs  envelope.rs  lib.rs  predicate.rs  proof.rs  witness.rs
crates/zk-eidas-types/tests/: types_test.rs
crates/zk-eidas-utils/: Cargo.toml
crates/zk-eidas-utils/src/: lib.rs
crates/zk-eidas-verifier/: Cargo.toml
crates/zk-eidas-verifier/src/: lib.rs  (+3 more)
crates/zk-eidas-wasm/: Cargo.toml
crates/zk-eidas-wasm/benches/: verify.rs
crates/zk-eidas-wasm/src/: circuit.rs  error.rs  lib.rs  mdoc.rs  merkle.rs  proof.rs  sumcheck.rs  transcript.rs  zk.rs
crates/zk-eidas-wasm/src/algebra/: dense.rs  eq.rs  mod.rs  poly.rs
crates/zk-eidas-wasm/src/field/: fp256.rs  gf2_128.rs  mod.rs
crates/zk-eidas-wasm/src/ligero/: mod.rs  reed_solomon.rs  transcript.rs
crates/zk-eidas-wasm/tests/: circuit_tests.rs  cross_verify.rs  field_tests.rs
crates/zk-eidas/benches/: prove_verify.rs
crates/zk-eidas/examples/: age_verification.rs
crates/zk-eidas/src/: builder.rs  escrow.rs  lib.rs  openid4vp.rs  templates.rs
crates/zk-eidas/tests/: builder_test.rs  error_paths.rs  eudi_conformance_test.rs  eudi_wallet_test.rs  integration_test.rs  mdoc_signed_integration.rs  multi_credential_predicates_test.rs  multi_credential_test.rs  openid4vp_test.rs  signed_integration.rs  templates_test.rs
crates/zk-eidas/tests/synthetic/: eudi_pid.rs  mod.rs  pid_credential.rs
demo/: README.md  start.sh  test-prod.sh
demo/api/: Cargo.toml  proof-cache.json
demo/api/proof-cache/binding/: bb30328726855e7e.json
demo/api/proof-cache/ecdsa/: 2969961848322258515.json  5562275211588971498.json  6586619571148899365.json  6684944657615533882.json  89911491413717471.json  9376795874763851124.json  9447983602925100764.json
demo/api/proof-cache/escrow/: 1fbb7d499d03ffc0.json  2460cfc01b28f1a7.json  abb99738b3bacd9b.json  f43db05a1baa7491.json
demo/api/proof-cache/predicate/: 19c933eb0502d1b3.json  9177525f92a56fbe.json  9f11f6a1e437b79c.json  b542900fad13fb6b.json  c443f6f343fa2bc2.json  cb61b36bab6360fd.json  cee9155b9bbe42a6.json  e3ac17d76910d5f2.json  e77d40f7cbc8dedc.json  e97df0c3ce85efc1.json  f818f6485ea210d5.json  fa3da262088f9131.json  ffd4eebea7dd36d6.json
demo/api/src/: main.rs  pre_warm.rs
demo/kleros/: package.json  tsconfig.json  vite.config.ts
demo/web/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wasm.d.ts
deploy/: loading.html  nginx-longfellow.conf  nginx.conf  supervisord-longfellow.conf
docs/: integrator-guide.md
docs/plans/: 2026-03-22-contracts-on-device-proving.md
docs/specs/: 2026-03-22-contracts-on-device-proving-design.md  2026-04-04-longfellow-migration-design.md  2026-04-04-longfellow-phase1.md  2026-04-04-longfellow-phase2-integration.md  2026-04-04-longfellow-phase2-plan.md
scripts/: dev-local.sh  install-hooks.sh  package.json  upload-artifacts.mjs
tools/vk-extract/: Cargo.toml
whitepaper/: Makefile  main.tex  references.bib
whitepaper/data/: benchmark-pretty.txt  mdoc-benchmark.json  p7s-benchmark.json
whitepaper/figures/: architecture.tex  escrow-protocol.tex
whitepaper/sections/: background.tex  conclusion.tex  construction.tex  discussion.tex  escrow.tex  eudi-mapping.tex  evaluation.tex  implementation.tex  introduction.tex  related-work.tex
wiki/: book.toml
wiki/src/: README.md  SUMMARY.md
(+102 files in other folders)
