[workspace]
resolver = "2"
members = [
    "crates/zk-eidas-types",
    "crates/zk-eidas-mdoc",
    "crates/zk-eidas-utils",
    "crates/zk-eidas",
    "crates/longfellow-sys",
    "crates/cbor-print",
    "demo/api",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/alik-eth/zk-eidas"

[workspace.dependencies]
zk-eidas-types = { path = "crates/zk-eidas-types" }
zk-eidas-mdoc = { path = "crates/zk-eidas-mdoc" }
zk-eidas-utils = { path = "crates/zk-eidas-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
