[package]
name = "longfellow-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI bindings to Google's Longfellow ZK proving system"
links = "mdoc_static"

[build-dependencies]
cmake = "0.1"
bindgen = "0.71"

[features]
# Exposes the test-only FFI entry `p7s::prove_bypass_host_anchors`. The
# C++ symbol `p7s_prove_test_bypass_host_anchors` is ALWAYS linked into
# the static library (name signals test usage), but the Rust wrapper is
# only exposed under this feature so production callers can't depend on
# it accidentally. Mirrors `zk-eidas-p7s/test-bypass-host-anchors`.
test-bypass-host-anchors = []

[dependencies]
libc = "0.2"
thiserror = "2"
zk-eidas-mdoc = { path = "../zk-eidas-mdoc" }
zk-eidas = { path = "../zk-eidas" }
zk-eidas-types = { path = "../zk-eidas-types" }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"

[[bin]]
name = "generate-circuits"
path = "src/bin/generate_circuits.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
