[package]
name = "zk-eidas-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
zk-eidas-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64 = "0.22"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"

[dev-dependencies]
