[package]
name = "zk-eidas-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zk-eidas-types = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
ark-circom = { package = "worldcoin-ark-circom", version = "0.2.0", default-features = false, features = ["circom-2"] }
ark-bn254 = "0.4.0"
ark-serialize = "0.4.1"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
rust-rapidsnark = "0.1.3"

[build-dependencies]
cc = "1"

[dev-dependencies]
serial_test = "3.4.0"
