[package]
name = "zk-eidas-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zk-eidas-types = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
num-bigint = "0.4"
rust-rapidsnark = "0.1.3"
tempfile = "3"

[build-dependencies]

[dev-dependencies]
