[package]
name = "zk-eidas-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zk-eidas-types = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
