[package]
name = "zk-eidas-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zk-eidas-types = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
hex = "0.4"
zk-eidas-parser = { version = "0.1.0", path = "../zk-eidas-parser" }
sha2 = "0.10.9"
num-bigint = "0.4.6"
zk-eidas-utils = { version = "0.1.0", path = "../zk-eidas-utils" }
zk-eidas-mdoc = { version = "0.1.0", path = "../zk-eidas-mdoc" }
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
