[package]
name = "zk-eidas-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
aes = "0.8"
ruzstd = "0.7"
thiserror = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
hex = "0.4"
longfellow-sys = { path = "../longfellow-sys" }
zk-eidas-mdoc = { path = "../zk-eidas-mdoc" }
zk-eidas-types = { path = "../zk-eidas-types" }