[package]
name = "zk-eidas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zk-eidas-types = { workspace = true }
zk-eidas-parser = { workspace = true }
zk-eidas-prover = { workspace = true }
zk-eidas-verifier = { workspace = true }
zk-eidas-utils = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
zk-eidas-parser = { workspace = true, features = ["test-utils"] }
zk-eidas-mdoc = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "prove_verify"
harness = false
