[package]
name = "zk-eidas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zk-eidas-types = { workspace = true }
zk-eidas-utils = { workspace = true }
zk-eidas-mdoc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
serde_json = { workspace = true }
num-bigint = "0.4"
ml-kem = { version = "0.3.0-rc.1", features = ["getrandom"] }
rand = "0.8"
aes-gcm = "0.10"

[dev-dependencies]
serde_json = { workspace = true }
